plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'com.betabase'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
}

application {
    mainClass = 'com.betabase.Main'
}

javafx {
    version = "23.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

test {
    useJUnitPlatform()
}
